Analytics page is fully functional and dynamic